# truffle

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md
.github/workflows/: build.yml
cmake/: TruffleConfig.cmake.in  TruffleFormatting.cmake  TruffleInstall.cmake  TruffleOptions.cmake  TruffleWarnings.cmake  VerifyInstall.cmake
docs/: architecture.md  charter.md  handoff.md  overview.md  roadmap.md
docs/adr/: 0001-layered-product-boundary.md  0002-render-data-ingestion-lanes.md  0003-backend-and-dependency-foundation.md  0004-render-batch-instance-layout.md  0005-frame-upload-ring.md  0006-gpu-transform-hierarchy-direction.md  0007-render-pass-model.md  README.md
examples/: CMakeLists.txt  host_surface_example.cpp  window_example.cpp
examples/host_workspace/: CMakeLists.txt
examples/host_workspace/src/: application.cpp  application.hpp  cad_workspace.cpp  cli.cpp  cli.hpp  editor_workspace.cpp  host_window.cpp  host_window.hpp  host_window_metal.mm  main.cpp  simulation_workspace.cpp  workspace.cpp  workspace.hpp
include/truffle/core/: config.hpp  handle.hpp  status.hpp
include/truffle/ecs/: entity.hpp  world.hpp
include/truffle/render/: components.hpp  pipeline_cache.hpp  render_batch.hpp  renderer.hpp
include/truffle/rhi/: metal_backend.hpp  null_backend.hpp  rhi.hpp  vulkan_backend.hpp
include/truffle/scene/: scene_adapter.hpp
include/truffle/window/: window.hpp
src/: CMakeLists.txt
src/backends/: CMakeLists.txt
src/backends/direct3d/: README.md
src/backends/metal/: CMakeLists.txt  README.md  metal_backend.mm
src/backends/null/: CMakeLists.txt  null_backend.cpp
src/backends/opengl/: README.md
src/backends/vulkan/: CMakeLists.txt  README.md  vulkan_backend.cpp
src/core/: CMakeLists.txt  core.cpp
src/ecs/: CMakeLists.txt  world.cpp
src/render/: CMakeLists.txt  renderer.cpp
src/rhi/: CMakeLists.txt  null_backend.cpp  rhi.cpp
src/scene/: CMakeLists.txt  scene_adapter.cpp
src/window/: window.cpp
tests/: CMakeLists.txt  ecs_contract_tests.cpp  frame_ring_tests.cpp  metal_backend_tests.cpp  render_batch_tests.cpp  render_flow_tests.cpp  rhi_null_tests.cpp  scene_adapter_tests.cpp  test_support.hpp
tests/package_consumer/: CMakeLists.txt  main.cpp
